# rm_arm_mujoco

./: .gitignore  CITATION.cff  LICENSE  README.en.md  README.md  main.py  pyproject.toml
assets/objects/: cube.xml  tray.xml
assets/robots/panda/: panda.xml
assets/scenes/: pick_place_scene.xml
configs/: robot.yaml  sim.yaml  task.yaml
scripts/: benchmark.py  record_demo.py  run_demo.py  test_camera.py  test_ik.py  test_vision.py  view_live.py
src/control/: arm_controller.py  gripper_controller.py
src/geometry/: frames.py  transforms.py
src/kinematics/: forward_kinematics.py  inverse_kinematics.py  jacobian.py
src/planning/: collision_check.py  grasp_planner.py  trajectory.py
src/sim/: camera.py  mujoco_env.py  recorder.py
src/task/: pick_place_task.py  state_machine.py
src/utils/: debug_draw.py  logger.py
src/vision/: aruco_pose.py  color_detector.py  pose_estimator.py
tests/: test_kinematics.py  test_state_machine.py  test_transforms.py
